IP listing shows required fields too now.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             margin-left: 1em;
         }
 
-        .parents {
+        div.info {
             border: 1px solid grey;
         }
 
-        .parents .parent {
+        .parents .parent,
+        .requirements .requirement {
             padding-left: 1em;
         }
     </style>
@@ -39,7 +40,9 @@
     <div id='control'>Control goes in here.</div>
     <div id='skos'></div>
     <hr />
+    <pre>
     <div id='logging'>Logging output.</div>
+    </pre>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
