Proper rendering of inheritance info for Dimensions

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         .requirements .requirement {
             padding-left: 1em;
         }
+
+        .requirement button {
+            margin-left: 1em;
+        }
+
+        .inheritance {
+            padding-left: 0.5em;
+        }
     </style>
     </head>
 <body>
